--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-Hello there, awesome person!
 
 <html>
   
- <body>
+   <head>
+    
+    <title>I am a title!</title>
+    
+   </head>
+  
+  
+   <body>
    Hello there, awesome person!
    
   </body>
    
-   </html>
- 
+</html>
+
